kubernetes/components/configs/allow-ingress.yaml
# allow ingress to gateway
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-ingress-to-gateway
 namespace: istio-ingress
spec:
 selector:
   matchLabels:
     istio: ingressgateway
 action: ALLOW
 rules:
   - {}
